# scalapack

.github/workflows/: cmake.yml  make.yml
TESTING/: CMakeLists.txt
